added new test paragraph

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <p>
             Ile to PLN? <strong class="js-kurs2">N/A</strong>
         </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ad pariatur nihil officiis corrupti sit repudiandae laudantium in sunt tempora vel facilis dolor ea, nulla doloremque recusandae quia quisquam dolore.
+        </p>
     </div>
 </body>
 
