added new dev with the new paragraph

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ad pariatur nihil officiis corrupti sit repudiandae laudantium in sunt tempora vel facilis dolor ea, nulla doloremque recusandae quia quisquam dolore.
         </p>
     </div>
+    <div>
+        <section>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam provident, repellat harum illum nulla accusamus quo, magni, iusto maxime aut necessitatibus eligendi possimus exercitationem ratione consequatur neque veritatis. Minima, ab.
+        </section>
+    </div>
 </body>
 
 </html>
