--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <meta name="viewport" content="width=!, initial-scale=1.0">
     <title>currency-conventer</title>
     <link rel="icon" href="Images/currency-conventer.png">
-    <meta property="og:image" content="Images/share.png"
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    <meta property="og:image" content="Images/share.png" <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="CSS/style.css" rel="stylesheet">
     <link href="CSS/form.css" rel="stylesheet">
+    <link href="CSS/background.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
 </head>
 
-<body class="body">
+<body class="body body--background">
     <div class="container">
         <form class="form js-form">
             <fieldset>
