i changed the leanguage to english

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div class="container">
         <form class="form js-form">
             <fieldset>
-                <legend>Kalkulator walut</legend>
+                <legend>Currency calculator</legend>
                 <p>
                     <img src="Images/Poland.png" alt="Poland" width="20">
                     <label>
                         <strong class="form__labelText">
-                            Mam
+                            I have
                         </strong>
                         <input class="form__field js-mam" name="mam">
                     </label>
@@ -35,23 +35,23 @@
                     <img src="Images/Euro.jpg" alt="Poland" width="20">
                     <label>
                         <strong class="form__labelText">
-                            Chcę
+                            I want
                         </strong>
                         <input class="form__field js-chce" name="js-chce">
                     </label>
                 </p>
                 <p>
-                    <button type="submit" class="form__button js-button">Sprawdź kurs</button>
+                    <button type="submit" class="form__button js-button">Check the rate</button>
                 </p>
             </fieldset>
         </form>
     </div>
     <div class="div">
         <p>
-            Ile to euro? <strong class="js-kurs">N/A</strong>
+            How much is euros? <strong class="js-kurs">N/A</strong>
         </p>
         <p>
-            Ile to PLN? <strong class="js-kurs2">N/A</strong>
+            How much is PLN? <strong class="js-kurs2">N/A</strong>
         </p>
     </div>
 </body>
