--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <img src="Images/Euro.jpg" alt="Poland" width="20">
                     <label>
                         <strong class="form__labelText">
-                            I want
+                            I have
                         </strong>
                         <input class="form__field js-chce" name="js-chce">
                     </label>
